--- a/app/views/hello_world/index.html.erb
+++ b/app/views/hello_world/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Hello World</h1>
 
-<!-- react_component calls HelloWorld.jsx: -->
+<!-- react_component calls app/javascript/bundles/HelloWorld/components/HelloWorld.jsx: -->
 <!-- (@hello_world_props comes from app/controllers/hello_world_controller.rb) -->
 <%= react_component("HelloWorld", props: @hello_world_props, prerender: false) %>
 
