--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,13 @@
     <title>Is It Vegan?</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'is-it-vegan-bundle' %>
   </head>
 
   <body>
+    <%= react_component("App", props: {}, prerender: false) %>
+
     <%= yield %>
   </body>
 </html>
