--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <%= react_component("App", props: {}, prerender: false) %>
+    <%= react_component("App", props: @app_props, prerender: false) %>
 
     <%= yield %>
   </body>
