--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :username, 'Username' %>
-    <%= f.text_field :username, required: true %>
+    <%= f.text_field :username %>
   </div>
 
   <div class="field">
@@ -42,3 +42,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+<%= link_to "<< Back", :back %>
