--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,5 +1,3 @@
-<!-- react_component calls app/javascript/bundles/HelloWorld/components/HelloWorld.jsx: -->
-<!-- (@hello_world_props comes from app/controllers/hello_world_controller.rb) -->
-<%= react_component("AppRouter", props: @app_props, prerender: false) %>
-
-<h1>Is It Vegan?</h1>
+<!-- react_component calls AppRouter from app/javascript/bundles/IsItVegan/containers/AppRouter.js: -->
+<!-- (@user comes from app/controllers/searches_controller.rb) -->
+<%= react_component('AppRouter', props: @user, prerender: false) %>
