Add flash message components

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+// @import 'motion-ui';
+// @include motion-ui-transitions;
+// @include motion-ui-animations;
+// @include motion-ui-transitions;
