--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,3 +1,3 @@
 <!-- react_component calls AppRouter from app/javascript/bundles/IsItVegan/containers/AppRouter.js: -->
-<!-- (@user comes from app/controllers/searches_controller.rb) -->
-<%= react_component('AppRouter', props: @user, prerender: false) %>
+<!-- (@props comes from app/controllers/searches_controller.rb) -->
+<%= react_component('AppRouter', props: @props, prerender: false) %>
