--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,17 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 
 // @import 'motion-ui';
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 // @include motion-ui-transitions;
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "rails_bootstrap_forms";
+
+@import "searches";
+@import "static_pages";
+@import "users";
